--- a/css/contactCSS.css
+++ b/css/contactCSS.css
@@ -5,6 +5,8 @@ h1 {
 form {
     margin: 0 auto;
     width: 50%;
+    background-color: #818a91;
+    padding: 50px;
 }
 
 label {
@@ -44,3 +46,68 @@ input[type="submit"]:hover {
     background-color: #f2f2f2;
     padding: 20px;
 }
+
+/*contact page*/
+
+#contact {
+    background-color: white;
+    opacity: 90%;
+}
+h1 {
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+form {
+    margin: 0 auto;
+    width: 50%;
+}
+label {
+    display: inline-block;
+    margin-top: 10px;
+}
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+select{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+
+}
+textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+
