--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,12 @@
-
+/*footer*/
 footer {
-    background-color: #f8f8f8;
-    padding: 20px;
+    background-color: white;
+    opacity: 90%;
+    padding: 0;
+    flex-shrink: 0;
+    margin-bottom: auto;
+    bottom: 0;
+    width: 100%;
 }
 
 .row {
@@ -13,7 +18,9 @@ footer {
 .column {
     width: 30%;
     padding: 10px;
+    align-content: center;
 }
+
 
 h3 {
     font-size: 18px;
@@ -28,13 +35,15 @@ ul {
 }
 
 li a {
-    color: #666;
+    color: black;
     text-decoration: none;
     font-size: 14px;
     padding: 5px 0;
     display: block;
+    align-content: center;
 }
 
 li a:hover {
-    color: #000;
+    color: gray;
 }
+
