--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,5 +1,17 @@
 nav {
-    background-color: #333;
+    background-color: white;
+    opacity:60%;
+    justify-content: space-evenly;
+    align-content: center;
+    width: 100%;
+    display: flex;
+    top: 0;
+    font-weight: bold;
+
+}
+nav img {
+    height: 80px;
+    margin-left: auto;
 }
 
 nav ul {
@@ -10,17 +22,94 @@ nav ul {
 }
 
 nav li {
-    float: right;
+    float: left;
 }
 
 nav li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 nav li a:hover {
-    background-color: #111;
+    background-color: lightgrey;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: Black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* Style the "active" element to highlight the current page */
+.navbar li.active {
+    background-color: #2196F3;
+    color: white;
+}
+.navbar input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+@media screen and (max-width: 600px) {
+    .navbar a, .navbar input[type=text] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .navbar input[type=text] {
+        border: 1px solid #ccc;
+    }
 }
