--- a/css/about.css
+++ b/css/about.css
@@ -1,38 +1,64 @@
 
-#header.top-bar{
-    justify-content: center;
-    width: auto;
-    text-align: right;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    top: -49px;
-}
-.about-container{
-    position: relative;
-    text-align: center;
-    color: black;
+/*#header.top-bar{*/
+/*    justify-content: center;*/
+/*    width: auto;*/
+/*    text-align: right;*/
+/*    font-family: 'Montserrat', sans-serif;*/
+/*    font-size: 16px;*/
+/*    font-weight: bold;*/
+/*    top: -49px;*/
+/*}*/
+/*.about-container{*/
+/*    position: relative;*/
+/*    text-align: center;*/
+/*    color: black;*/
+/*    background-color: white;*/
+/*    !*opacity: 90%;*!*/
+/*}*/
+/*.center {*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, 50%);*/
+/*    !*font-family: 'Montserrat', sans-serif;*!*/
+/*    font-size: larger;*/
+/*}*/
+/*body{*/
+/*    text-align: center;*/
+/*}*/
+/*main{*/
+/*    padding: 20px;*/
+/*}*/
+/*p{*/
+/*    !*background-color: wheat;*!*/
+/*    opacity: 90%;*/
+/*    align-content: space-evenly;*/
+/*    padding: 70px;*/
+/*    text-align: center;*/
+/*}*/
+.about-container {
+    margin: 50px;
+    padding: 30px;
     background-color: white;
-    /*opacity: 90%;*/
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    /*font-family: 'Montserrat', sans-serif;*/
-    font-size: larger;
-}
-body{
+
+.about-container h1 {
+    font-size: 3em;
     text-align: center;
+    margin: 0 0 30px;
 }
-main{
-    padding: 20px;
+
+.about-container p {
+    font-size: 1.25em;
+    line-height: 1.6;
+    margin: 0 0 30px;
 }
-p{
-    /*background-color: wheat;*/
-    opacity: 90%;
-    align-content: space-evenly;
-    padding: 70px;
-    text-align: center;
+
+.about-container img {
+    max-width: 400px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
+
