--- a/css/contactCSS.css
+++ b/css/contactCSS.css
@@ -5,7 +5,7 @@ h1 {
 form {
     margin: 0 auto;
     width: 50%;
-    background-color: #818a91;
+    background-color: lightgrey;
     padding: 50px;
 }
 
