--- a/css/sell.css
+++ b/css/sell.css
@@ -11,3 +11,50 @@
     /*font-family: 'Montserrat', sans-serif;*/
     font-size: larger;
 }
+.logo {
+    display: inline-block;
+}
+.logo img {
+    height: 50px;
+}
+ul {
+    display: flex;
+    list-style-type: none;
+}
+li {
+    margin: 0 10px;
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+.container img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.center {
+    text-align: center;
+}
+.howTo {
+    margin: 50px;
+    padding: 30px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+.howTo h3 {
+    margin-top: 0;
+    padding-top: 30px;
+}
+ol {
+    margin-left: 20px;
+}
