--- a/css/home.css
+++ b/css/home.css
@@ -112,3 +112,20 @@ footer{
     font-size: 16px;
     margin-bottom: 10px;
 }
+
+.container {
+    position: relative;
+}
+
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 1;
+}
+ .image img{
+     filter: brightness(50%);
+ }
