--- a/css/sell.css
+++ b/css/sell.css
@@ -11,13 +11,8 @@
     /*font-family: 'Montserrat', sans-serif;*/
     font-size: larger;
 }
-.logo {
-    display: inline-block;
-}
-.logo img {
-    height: 50px;
-}
-ul {
+
+container.ul {
     display: flex;
     list-style-type: none;
 }
@@ -57,4 +52,7 @@ a:hover {
 }
 ol {
     margin-left: 20px;
+}
+h1 {
+    text-align: center;
 }
